# nets_cv

./: README.md  pyproject.toml
model/: fnc.py  resnet.py
train/: resnet_trainer.py
