[tool.poetry]
name = "nets_cv"
version = "0.1.0"
description = ""
authors = ["Andrey Nemerov"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
torch = "<2.3"
numpy = "<2.0.0"
torchvision = "<0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
